@@ -4,6 +4,9 @@ Flusspferd Change Log
 Release 0.9
 -----------
 
+2009-12-28:
+- Enable JIT by default in flusspferd REPL
+
 2009-12-23:
 - Re-added overhauled cURL module (#112).
 
